# splitcheck

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
src/splitcheck/: __init__.py  __main__.py  check.py  cli.py  dataset.py  normalize.py  overlap.py  render.py
tests/: test_check.py  test_dataset_cli.py  test_normalize_overlap.py
