[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splitcheck"
version = "0.1.0"
description = "Detect row overlap and leakage between dataset splits."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "José del Río" }]
keywords = ["data-leakage", "train-test-split", "deduplication", "mlops", "data", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "polars>=1.0",
]

[project.urls]
Homepage = "https://github.com/jmweb-org/splitcheck"
Repository = "https://github.com/jmweb-org/splitcheck"
Issues = "https://github.com/jmweb-org/splitcheck/issues"

[project.scripts]
splitcheck = "splitcheck.cli:entrypoint"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/splitcheck"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "C4", "RUF"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.run]
source = ["splitcheck"]
branch = true
